--- a/main.html
+++ b/main.html
@@ -53,8 +53,8 @@
 				<input id="tos" type="checkbox" required>
 			</li>
 			<li>
-				<label for="submit">Submit Form</label>
-				<input id="submit" type="submit" >
+				
+				<button type="submit">submit button</button>
 			</li>
 		</ol>
 	</form>
